project( graph_utils )
cmake_minimum_required( VERSION 3.0 )
set (CMAKE_CXX_STANDARD 11)
include ( ../cmake_scripts/find_dependencies.cmake )
include ( ../cmake_scripts/compiler_warning.cmake )
include_directories(${GLOG_INCLUDE_DIRS})

set (SRC main.cpp)
add_executable( ${PROJECT_NAME} ${SRC})
target_link_libraries(${PROJECT_NAME} ${GLOG_LIBRARIES})
